adicionando projeto dieta cetogenica

--- a/Desafios/Site-Pet/index.html
+++ b/Desafios/Site-Pet/index.html
@@ -24,36 +24,61 @@
             <div class="itens-menu"><a href="servicos.html">Serviços</a></div>
             <div class="itens-menu"><a href="blog.html">Blog</a></div>
             <div class="itens-menu"><a href="contato.html">Contato</a></div>
-            <div id="ligue" class="itens-menu">Login    </div>
+            <div id="ligue" class="itens-menu">Login </div>
         </div>
     </header>
-    <article>
-        <section>
+    <article class="article-type-1">
+        <section class="section-type-1">
             <div id="pet-care">
                 <h1 style="font-size: 120px; margin: 0px 0px; font-weight: bolder;">Pet <br> Care</h1>
                 <p style="font-size: 35px; margin: 0px 0px; ;">Veterinário em Domicílio</p>
-                <div id="agende">Agende uma visita</div>
+                <div id="agende">AGENDE UMA VISITA</div>
             </div>
             <div id="doguinho">
                 <img src="foto-doguinho.png" id="foto-doguinho" width="500px" height="500px">
             </div>
         </section>
     </article>
-    <article>
-        <section>
+    <article class="article-type-1">
+        <section class="section-type-1">
             <div id="doguinho">
                 <img src="veterinaria.jpg" id="foto-doguinho" width="500px" height="500px">
             </div>
             <div id="sobre-mim">
                 <h1 style="font-size: 50px; margin: 30px 20px; font-weight: bolder;">Sobre mim</h1>
-                <p style="font-size: 18px; margin: 30px 20px; ;">Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. É fácil! Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo e trocar fontes. Sou um ótimo lugar para você contar sua história.</p>
-                <div id="agende" style="margin: 30px 20px;">Leia Mais</div>
+                <p style="font-size: 18px; margin: 30px 20px; ;">Sou um parágrafo. Clique aqui para editar e adicionar o
+                    seu próprio texto. É fácil! Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e você
+                    poderá adicionar o seu próprio conteúdo e trocar fontes. Sou um ótimo lugar para você contar sua
+                    história.</p>
+                <div id="agende" style="margin: 30px 20px;">LEIA MAIS</div>
+            </div>
+        </section>
+    </article>
+    <article id="article2">
+        <section id="section2">
+            <h2 style="font-size: 50px;">Serviços</h2>
+            <div id="servicos">
+                <div class="elementos-servicos"><img src="doguinho1.webp" style="border-radius: 50%;">
+                    <h1>Escovação</h1>
+                    <p style="font-size: 15px; text-align: center;">Sou um parágrafo. Use esta área para descrever um de seus serviços. Você pode trocar o título para o serviço que você presta e descrevê-lo. Sinta-se à vontade para mudar a imagem</p>
+                    <div class="reserve-ja">RESERVE JÁ</div>
+                </div>
+                <div class="elementos-servicos"><img src="gatinho.webp" style="border-radius: 50%;">
+                    <h1>Checkup</h1>
+                    <p style="font-size: 15px; text-align: center;">Sou um parágrafo. Use esta área para descrever um de seus serviços. Você pode trocar o título para o serviço que você presta e descrevê-lo. Sinta-se à vontade para mudar a imagem</p>
+                    <div class="reserve-ja">RESERVE JÁ</div>
+                </div>
+                <div class="elementos-servicos"><img src="doguinho2.webp" style="border-radius: 50%;">
+                    <h1>Dental</h1>
+                    <p style="font-size: 15px; text-align: center;">Sou um parágrafo. Use esta área para descrever um de seus serviços. Você pode trocar o título para o serviço que você presta e descrevê-lo. Sinta-se à vontade para mudar a imagem</p>
+                    <div class="reserve-ja">RESERVE JÁ</div>
+                </div>
             </div>
         </section>
     </article>
     <footer>
         <div id="redes-sociais">
-            
+
         </div>
     </footer>
 </body>
