--- a/Desafios/Site-de-vendas/index.html
+++ b/Desafios/Site-de-vendas/index.html
@@ -43,7 +43,7 @@
     </aside>
     <section>
         <div id="vinho">
-            <img src="vinho.webp" width="1100px" height="800px">
+            <img src="vinho.webp" width="100%" height="800px">
         </div>
         <div id="pag-ent">
             <div class="pag-ent-blocos">
