alteração do css do ex

--- a/JS/tarefa02/index.html
+++ b/JS/tarefa02/index.html
@@ -6,25 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Montserrat:wght@100&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <div id="ex1">
+    <div id="div1">
         <h1>Comparador de números</h1>
         <input type="number" name="num1" id="num1">
         <input type="number" name="num2" id="num2">
         <input type="button" value="Comparar" id="verificar" onclick="comparar_num()">
         <p id="resultado_num"></p>
     </div>
-    <div>
-    <h1>Comparador de strings</h1>
+    <div id="div2">
+        <h1>Comparador de strings</h1>
         <input type="text" name="" id="string1">
         <input type="text" name="" id="string2">
         <input type="button" value="Comparar" id="comparar" onclick="comparar_strings()">
         <p id="resultado_str"></p>
     </div>
-    <div>
+    <div id="div3">
         <h1>Quanto falta para eu morrer? </h1>
         <input type="date" name="" id="nascimento">
         <input type="radio" name="sexo" id="masculino">
