--- a/JS/tarefa04/ex-a/index.html
+++ b/JS/tarefa04/ex-a/index.html
@@ -18,18 +18,19 @@
         <h1>Calculadora de IMC</h1>
         <div id="div-interna">
             <div class="itens">
-                <label for="">Altura(cm)</label>
+                <label for="">Peso(kg)</label>
                 <input type="text" name="" id="peso">
             </div>
             <div class="itens">
-                <label for="">Peso(kg)</label>
+                <label for="">Altura(m)</label>
                 <input type="text" name="" id="altura">
             </div>
             <div id="botao">
                 <input type="button" value="Calcular" onclick="calcular()">
             </div>
         </div>
-        <p>Resultado</p>
+        <p id="r1">Resultado</p>
+        <p id="r2"></p>
     </div>
     <script src="index.js"></script>
 </body>
