--- a/JS/tarefa04/ex-c/index.html
+++ b/JS/tarefa04/ex-c/index.html
@@ -18,12 +18,8 @@
         <h1>Max-Min</h1>
         <div id="div-interna">
             <div class="itens">
-                <label for="">Maximo</label>
+                <label for="">Numero</label>
                 <input type="text" name="" id="max">
-            </div>
-            <div class="itens">
-                <label for="">Minimo</label>
-                <input type="text" name="" id="min">
             </div>
             <div id="botao">
                 <input type="button" value="Calcular" onclick="calcular()">
