--- a/JS/tarefa04/ex-c/index.html
+++ b/JS/tarefa04/ex-c/index.html
@@ -19,7 +19,7 @@
         <div id="div-interna">
             <div class="itens">
                 <label for="">Numero</label>
-                <input type="text" name="" id="max">
+                <input type="text" name="" id="num">
             </div>
             <div id="botao">
                 <input type="button" value="Calcular" onclick="calcular()">
