--- a/JS/tarefa05/ex-1/index.html
+++ b/JS/tarefa05/ex-1/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Montserrat:wght@100&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>ex1</title>
 </head>
+
 <body>
-<script src="index.js"></script>
+    <div id="bloco-principal">
+        <h1>Digite um número de 1 a 10</h1>
+        <div>
+            <input type="number" name="" id="num">
+            <input type="button" value="OK" onclick="escrever()">
+        </div>
+        <p>Número por extenso</p>
+    </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
