adicionando ex3 tarefa04

--- a/JS/tarefa05/ex-3/index.html
+++ b/JS/tarefa05/ex-3/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>ex1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Montserrat:wght@100&display=swap"
+        rel="stylesheet">
+    <title>ex3</title>
 </head>
 <body>
+    <div id="bloco-principal">
+        <h1>Escolha um produto</h1>
+        <div id="div-interna">
+        <select name="Produto" id="">
+            <option value="1">Celular</option>
+            <option value="2">Notebook</option>
+            <option value="3">Video Game</option>
+            <option value="4">TV</option>
+            <option value="5">Tablet</option>
+        </select>
+        <input type="button" value="OK" onclick="clicar()">
+    </div>
+        <img src="" id="img">
+        <p></p>
+    </div>
 <script src="index.js"></script>
 </body>
 </html>
