--- a/JS/tarefa06/ex1/index.html
+++ b/JS/tarefa06/ex1/index.html
@@ -15,12 +15,11 @@
 
 <body>
     <div id="bloco-principal">
-        <h1>Escolha a data</h1>
-        <div>
-            <input type="date" name="" id="data">
-            <input type="button" value="OK" onclick="info()">
+        <p>Desarme a bomba para salvar o gatinho Barney</p>
+        <div style="display:flex; flex-direction:row;">
+            <img id="foto-bomba" src="bomba.jpg">
+            <img id="foto-gatinho" src="gatinho2.jpg">
         </div>
-        <p>Dia</p>
     </div>
     <script src="index.js"></script>
 </body>
