--- a/JS/tarefa06/ex2/index.html
+++ b/JS/tarefa06/ex2/index.html
@@ -14,13 +14,14 @@
 </head>
 
 <body>
+    <audio id="som"></audio>
     <div id="bloco-principal">
-        <h1>Escolha a data</h1>
-        <div>
-            <input type="date" name="" id="data">
-            <input type="button" value="OK" onclick="info()">
+        <p id="msg">Desarme a bomba para salvar o gatinho Barney</p>
+        <p id="cont">60</p>
+        <div style="display:flex; flex-direction:row;">
+            <img id="foto-bomba" src="bomba.jpg">
+            <img id="foto-gatinho" src="gatinho2.jpg">
         </div>
-        <p>Dia</p>
     </div>
     <script src="index.js"></script>
 </body>
