--- a/JS/tarefa06/ex3/index.html
+++ b/JS/tarefa06/ex3/index.html
@@ -26,7 +26,7 @@
                 <select name="Segundos" id="seg" class="itens"></select>
             </div>
 
-            <input type="button" id="botao" class="itens" value="Iniciar Contagem Regressiva" onclick="cont()">
+            <input type="button" id="botao" class="itens" value="Iniciar Contagem Regressiva">
         </div>
         <p>Contador</p>
     </div>
