--- a/JS/tarefa06/ex3/index.html
+++ b/JS/tarefa06/ex3/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <audio></audio>
     <div id="bloco-principal">
         <h1>Alarme</h1>
         <div id="bloco-secundario">
