--- a/JS/tarefa07/ex2/index.html
+++ b/JS/tarefa07/ex2/index.html
@@ -15,12 +15,11 @@
 
 <body>
     <div id="bloco-principal">
-        <h1>Digite um número de 1 a 10</h1>
+        <h1>Digite o Cep</h1>
         <div>
-            <input type="number" name="" id="num">
-            <input type="button" value="OK" onclick="escrever()">
+            <input type="text" name="" id="num" maxlength="9">
+            <p></p>
         </div>
-        <p>Número por extenso</p>
     </div>
     <script src="index.js"></script>
 </body>
