--- a/JS/tarefa07/ex3/index.html
+++ b/JS/tarefa07/ex3/index.html
@@ -15,12 +15,12 @@
 
 <body>
     <div id="bloco-principal">
-        <h1>Digite um número de 1 a 10</h1>
+        <textarea name="" id="" cols="60" rows="10" disabled></textarea>
         <div>
-            <input type="number" name="" id="num">
-            <input type="button" value="OK" onclick="escrever()">
+            <input type="text" name="" id="msg">
+            <input type="button" id="enviar" value="Enviar" onclick="enviar()">
+            <input type="button" id="Limpar" value="Limpar" onclick="limpar()">
         </div>
-        <p>Número por extenso</p>
     </div>
     <script src="index.js"></script>
 </body>
