--- a/JS/tarefa08/ex1/index.html
+++ b/JS/tarefa08/ex1/index.html
@@ -44,7 +44,7 @@
             <p id="genero-erro"></p>
         </div>
         <input type="button" value="Enviar" id="botao" onclick="enviar()">
-        <p>a</p>
+        <p id="resultado">a</p>
         <script src="index.js"></script>
 </body>
 
