adicionando tarefa8 ex3

--- a/JS/tarefa08/ex2/index.html
+++ b/JS/tarefa08/ex2/index.html
@@ -15,12 +15,12 @@
 
 <body>
     <div id="bloco-principal">
-        <textarea name="" id="" cols="60" rows="10" disabled></textarea>
-        <div>
-            <input type="text" name="" id="msg">
+        <h1 style="font-size: 15px;">Mande o objeto no formato <strong>{"atributo1": "valor 1", "atributo2": "valor 2"}</strong></h1>
+        <textarea name="" id="" cols="60" rows="10"></textarea>
+        <div>>
             <input type="button" id="enviar" value="Enviar" onclick="enviar()">
-            <input type="button" id="Limpar" value="Limpar" onclick="limpar()">
         </div>
+        <p></p>
     </div>
     <script src="index.js"></script>
 </body>
