--- a/JS/tarefa08/ex3/index.html
+++ b/JS/tarefa08/ex3/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Montserrat:wght@100&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <title>ex1</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <div id="bloco-principal">
-        <textarea name="" id="" cols="60" rows="10" disabled></textarea>
-        <div>
-            <input type="text" name="" id="msg">
-            <input type="button" id="enviar" value="Enviar" onclick="enviar()">
-            <input type="button" id="Limpar" value="Limpar" onclick="limpar()">
-        </div>
-    </div>
-    <script src="index.js"></script>
+    
+    <script src="index.js">
+    </script>
 </body>
-
 </html>
