--- a/JS/tarefa16/index.html
+++ b/JS/tarefa16/index.html
@@ -24,6 +24,7 @@
             
         
         </table>
+        <input type="button" value="Exibir Mapa" id="exibir">
         <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.br/maps?q=-23.2049009,-45.8944638&output=embed&dg=oo"></iframe>
     </div>
     <script src="index.js"></script>
